# stock-dashboard

./: .gitignore  README.md  dashboard-mockup-1.html  docker-compose.yml  restaurant-intelligence-dashboard-plan-3.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/analysis/: attribution.py  correlation.py  frame.py  fundamentals.py  heatmap.py  outcomes.py  regression.py  scatter.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routes/: _filters.py  ai.py  analysis.py  briefing.py  commodities.py  companies.py  earnings.py  events.py  filings.py  holdings.py  hypotheses.py  jobs.py  macro.py  news.py  ops.py  options.py  simulate.py  social.py  trends.py  universe.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 2ac7f5019a6d_initial_schema.py
backend/features/: engineer.py
backend/ingest/: prices.py  rate_limiter.py  scheduler.py  source_run.py
backend/ingest/sources/: commodities.py  earnings.py  email_imap.py  filings.py  fundamentals.py  holdings.py  jobs.py  macro.py  news_rss.py  options.py  pr_pages.py  prices.py  reddit.py  trends.py  weather.py
backend/normalize/: briefing.py  events.py  hypothesis.py  postmortem.py  sentiment.py  signals.py
backend/simulation/: backtest.py  dcf.py  earnings_bootstrap.py  price_paths.py
backend/tests/: conftest.py  test_api.py  test_hypothesis.py  test_outcomes.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/commodities/: page.tsx
frontend/src/app/correlations/: page.tsx
frontend/src/app/earnings/: page.tsx
frontend/src/app/holders/: page.tsx
frontend/src/lib/: api-types.ts  api.ts  dateRange.ts  format.ts  info.ts  interpret.ts  types.ts
frontend/src/test/: Pill.test.tsx  dateRange.test.ts  format.test.ts
(+49 files in other folders)
