[project]
name = "restin-backend"
version = "0.1.0"
description = "Restaurant Intelligence Terminal — backend API + ingest workers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "psycopg2-binary>=2.9"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingest*"]

[tool.ruff]
line-length = 100
target-version = "py311"
